cmake_minimum_required(VERSION 3.14)
project(PA33)

set(CMAKE_CXX_STANDARD 14)


add_executable(PA33 Point2D.h Point2D.cpp Vector2D.h Vector2D.cpp GameObject.h GameObject.cpp cmake-build-debug/ cmake-build-debug/ Building.h PokemonCenter.h Building.cpp PokemonCenter.cpp PokemonGym.h PokemonGym.cpp TestCheckpoint2.cpp Pokemon.cpp Pokemon.h Model.h GameCommand.h View.cpp View.h Model.cpp GameCommand.cpp UserInput.cpp UserInput.h)